--- a/res.qrc
+++ b/res.qrc
@@ -1,8 +1,13 @@
 <RCC>
-    <qresource prefix="/"/>
+    <qresource prefix="/">
+        <file>lastButton.ico</file>
+        <file>nextButton.ico</file>
+    </qresource>
     <qresource prefix="/new/prefix1">
         <file>Music.ico</file>
         <file>back.jpg</file>
         <file>search1.jpg</file>
+        <file>lastButton.ico</file>
+        <file>nextButton.ico</file>
     </qresource>
 </RCC>
